--- a/außeneingreifer.html
+++ b/außeneingreifer.html
@@ -23,7 +23,7 @@
                         </a>
                         <ul class="dropdown-menu bg-dropdown">
                             <li><a class="dropdown-item" href="zuspieler.html">Zuspieler</a></li>
-                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalspieler</a></li>
+                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalangreifer</a></li>
                             <li><a class="dropdown-item" href="libero.html">Libero</a></li>
                             <li><a class="dropdown-item" href="blocker.html">Blocker</a></li>
                         </ul>
@@ -51,32 +51,39 @@
         </div>
         <div class="content">
             <h1>Außeneingreifer</h1>
-            <div class="text-container">
-                <div class="text"> 
-                    <p>Außenangreifer:innen, die auch als Linksangreifer:innen bezeichnet werden, spielen am linken Netzpfosten. Traditionell sind Außenangreifer:innen die Besten im Schmettern und erzielen die meisten Punkte, erklärt Rosen. 
-                        Dies liegt daran, dass sie sich an einer Position befinden, an der für Zuspieler:innen die Vorbereitung am einfachsten ist. Daher erhalten sie normalerweise die meisten Zuspiele.
-                        Laut Jonny Neeley, Assistenzcoach des Frauenvolleyballteams der Brigham Young University (BYU) liegt dies daran, dass Zuspieler:innen den Ball für Außenangreifer:innen mit guten und schlechten Zuspielen auflegen können.
-                        </p>
-                </div>
-                <div class="text">
-                    <p>Bei Angriffen der BYU können Außenangreifer:innen zum Beispiel so positioniert werden, dass sie bei einem guten Anspiel anlaufen und schlagen können, wenn Zuspieler:innen in Position kommen und den Ball so zuspielen, dass Außenangreifer:innen ihn schmettern können. 
-                        Wenn Zuspieler:innen aber schwierige Bälle verarbeiten müssen, kann das Zuspiel sehr hoch sein und Außenangreifer:innen können hochspringen und den Ball in das gegnerische Feld schmettern. Außenangreifer:innen müssen außerdem gut springen und schlagen können, weil sie meistens in allen Phasen im Spiel sind, sagt Rosen. 
-                        </p>
-                </div>
-                <div class="text">
-                    <p>Da die Spieler:innen rotieren, müssen Außenangreifer:innen demnach nicht nur am Netz, sondern auch aus dem hinteren Teil des Felds schlagen können. "Die drei Spieler:innen in der hinteren Reihe (zu Beginn des Spielzugs) dürfen den Ball vor der 3-Meter-Linie nicht berühren und über das Netz spielen", erklärt Neeley. 
-                        Wenn Außenangreifer:innen im hinteren Teil des Felds in einer Spielphase beginnen, also hinter der 3-Meter-Linie, dürfen sie während dieser Phase nicht vor der Linie springen und schlagen. Wenn sie im hinteren Teil des Felds spielen, sind Außenangreifer:innen normalweise auch gut im Passen, um den Ball ans Netz zu bringen, sagt Rosen.
-                    </p>
+            <div class="card mb-3" style="max-width: auto;">
+                <div class="row g-0">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Generell-Informationen</h5>
+                            <p class="card-text">Außenangreifer:innen, die auch als Linksangreifer:innen bezeichnet werden, spielen am linken Netzpfosten. Traditionell sind Außenangreifer:innen die Besten im Schmettern und erzielen die meisten Punkte, erklärt Rosen. 
+                                Dies liegt daran, dass sie sich an einer Position befinden, an der für Zuspieler:innen die Vorbereitung am einfachsten ist. Daher erhalten sie normalerweise die meisten Zuspiele.
+                                Laut Jonny Neeley, Assistenzcoach des Frauenvolleyballteams der Brigham Young University (BYU) liegt dies daran, dass Zuspieler:innen den Ball für Außenangreifer:innen mit guten und schlechten Zuspielen auflegen können.
+                            </p>
+                            <p class="card-text">Bei Angriffen der BYU können Außenangreifer:innen zum Beispiel so positioniert werden, dass sie bei einem guten Anspiel anlaufen und schlagen können, wenn Zuspieler:innen in Position kommen und den Ball so zuspielen, dass Außenangreifer:innen ihn schmettern können. 
+                                Wenn Zuspieler:innen aber schwierige Bälle verarbeiten müssen, kann das Zuspiel sehr hoch sein und Außenangreifer:innen können hochspringen und den Ball in das gegnerische Feld schmettern. Außenangreifer:innen müssen außerdem gut springen und schlagen können, weil sie meistens in allen Phasen im Spiel sind, sagt Rosen. 
+                            </p>
+                            <p class="card-text">Da die Spieler:innen rotieren, müssen Außenangreifer:innen demnach nicht nur am Netz, sondern auch aus dem hinteren Teil des Felds schlagen können. "Die drei Spieler:innen in der hinteren Reihe (zu Beginn des Spielzugs) dürfen den Ball vor der 3-Meter-Linie nicht berühren und über das Netz spielen", erklärt Neeley. 
+                                Wenn Außenangreifer:innen im hinteren Teil des Felds in einer Spielphase beginnen, also hinter der 3-Meter-Linie, dürfen sie während dieser Phase nicht vor der Linie springen und schlagen. Wenn sie im hinteren Teil des Felds spielen, sind Außenangreifer:innen normalweise auch gut im Passen, um den Ball ans Netz zu bringen, sagt Rosen.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card-body" style="background-color: black; border: 2px solid black; border-radius: 10px; box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);">
+                            <img src="pics/außeneingreifer.jpg" class="img-fluid rounded-start mx-auto d-block" alt="" style="max-width: 100%; height: auto;">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        
         <div class="background-2-1">
         </div> 
         <div class="flip-card-container">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 5:1 </p>
                     </div>
                     <div class="flip-card-back">
@@ -88,7 +95,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 4:2 </p>
                     </div>
                     <div class="flip-card-back">
@@ -99,7 +106,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 6:0 </p>
                     </div>
                     <div class="flip-card-back">
@@ -109,33 +116,41 @@
                 </div>
             </div>
         </div>
+
         <div class="content">
-            <h1>Diagonalspieler:innen</h1>
-            <div class="text-container">
-                <div class="text"> 
-                    <p>Diagonalspieler:innen, oder rechte Angreifer:innen, spielen am Netzpfosten auf der rechten Seite des Felds. Deshalb stehen sie den gegnerischen Außenangreifer:innen direkt gegenüber. "Diagonalspieler:innen müssen gut blocken können, weil sie gegen die Außenangreifer:innen der Gegenseite verteidigen. Und Außenangreifer:innen werden meistens angespielt", sagt Rosen. 
-                        Diagonalspieler:innen haben also am häufigsten die Möglichkeit zum Blocken. Aufgrund ihrer Position auf dem Feld spielen Linkshänder:innen oft als Diagonalspieler:innen. 
-                    </p>
-                </div>
-                <div class="text">
-                    <p>Rosen sagt, mit ihrer rechten Schulter am rechten Netzpfosten können sich linkshändige Diagonalspieler:innen der anderen Seite des Felds zuwenden und springen, um zu schlagen, wobei sie den Ball nach dem Zuspiel immer vor sich haben. 
-                        Rechtshändige Diagonalspieler:innen müssen oft Zuspiele verarbeiten die über ihre Köpfe bei ihnen ankommen. Diagonalspieler:innen müssen auch passen und zuspielen können. Bei einem erwarteten Spielverlauf baggern verteidigende Spieler:innen den Ball und Zuspieler:innen spielen ihn zu Angreifer:innen. 
-                        </p>
-                </div>
-                <div class="text">
-                    <p>Wenn aber Zuspieler:innen den ersten Ball bereits schlagen, versuchen oft die Angreifer:innen der Gegenseite, den Ball zu anderen Angreifer:innen zu spielen. Diagonalspieler:innen müssen auch in der Lage sein, in der vorderen und hinteren Reihe zu springen und zu schlagen. Diese Position erhält nicht so viele Zuspiele wie die Außenangreifer:innen, aber Diagonalspieler:innen sind dennoch entscheidend für den Erfolg.
-                        "Mit guten Diagonalspieler:innen werden Spiele auch auf höchstem Niveau gewonnen. Die besten internationalen Teams sind erfolgreich, weil sie starke Diagonalspieler:innen haben", sagt Neeley.</p>
-                </p>
+            <h1>Diagonalangreifer</h1>
+            <div class="card mb-3" style="max-width: auto;">
+                <div class="row g-0">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Generell-Informationen</h5>
+                            <p class="card-text">Diagonalspieler:innen, oder rechte Angreifer:innen, spielen am Netzpfosten auf der rechten Seite des Felds. Deshalb stehen sie den gegnerischen Außenangreifer:innen direkt gegenüber. "Diagonalspieler:innen müssen gut blocken können, weil sie gegen die Außenangreifer:innen der Gegenseite verteidigen. Und Außenangreifer:innen werden meistens angespielt", sagt Rosen. 
+                                Diagonalspieler:innen haben also am häufigsten die Möglichkeit zum Blocken. Aufgrund ihrer Position auf dem Feld spielen Linkshänder:innen oft als Diagonalspieler:innen. 
+                            </p>
+                            <p class="card-text">Rosen sagt, mit ihrer rechten Schulter am rechten Netzpfosten können sich linkshändige Diagonalspieler:innen der anderen Seite des Felds zuwenden und springen, um zu schlagen, wobei sie den Ball nach dem Zuspiel immer vor sich haben. 
+                                Rechtshändige Diagonalspieler:innen müssen oft Zuspiele verarbeiten die über ihre Köpfe bei ihnen ankommen. Diagonalspieler:innen müssen auch passen und zuspielen können. Bei einem erwarteten Spielverlauf baggern verteidigende Spieler:innen den Ball und Zuspieler:innen spielen ihn zu Angreifer:innen. 
+                                </p>
+                            <p class="card-text">Wenn aber Zuspieler:innen den ersten Ball bereits schlagen, versuchen oft die Angreifer:innen der Gegenseite, den Ball zu anderen Angreifer:innen zu spielen. Diagonalspieler:innen müssen auch in der Lage sein, in der vorderen und hinteren Reihe zu springen und zu schlagen. Diese Position erhält nicht so viele Zuspiele wie die Außenangreifer:innen, aber Diagonalspieler:innen sind dennoch entscheidend für den Erfolg.
+                                "Mit guten Diagonalspieler:innen werden Spiele auch auf höchstem Niveau gewonnen. Die besten internationalen Teams sind erfolgreich, weil sie starke Diagonalspieler:innen haben", sagt Neeley.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card-body" style="background-color: black; border: 2px solid black; border-radius: 10px; box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);">
+                            <img src="pics/diagonalangreifer.jpg" class="img-fluid rounded-start mx-auto d-block" alt="" style="max-width: 100%; height: auto;">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        
         <div class="background-2-1">
         </div> 
         <div class="flip-card-container">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 5:1 </p>
                     </div>
                     <div class="flip-card-back">
@@ -146,7 +161,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 4:2 </p>
                     </div>
                     <div class="flip-card-back">
@@ -157,7 +172,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 6:0 </p>
                     </div>
                     <div class="flip-card-back">
@@ -197,7 +212,7 @@
                         <h3>Links <div class="underline"><span></span></div></h3>
                         <form>
                             <i class="fa-regular fa-envelope"></i>
-                            <input type="email" placeholder=" Enter your email id" required>
+                            <input type="email" placeholder="Geben Sie Ihre E-Mail ein" required>
                             <button type="submit"><i class="fas fa-arrow-right" arial-hidden="true"></i></button>
                         </form>
                         <div class="social-icons">
