--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </a>
                         <ul class="dropdown-menu bg-dropdown">
                             <li><a class="dropdown-item" href="zuspieler.html">Zuspieler</a></li>
-                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalspieler</a></li>
+                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalangreifer</a></li>
                             <li><a class="dropdown-item" href="libero.html">Libero</a></li>
                             <li><a class="dropdown-item" href="blocker.html">Blocker</a></li>
                         </ul>
@@ -32,11 +32,9 @@
                 </ul>
             </div>
         </nav>
-
         
         <div class="background-1" id="home">
             <div class="first-slide">
-                <small>Azra Özdemir</small>
                 <h1>Volleyball</h1>
                 <a href="https://de.wikipedia.org/wiki/Volleyball">
                     <button type="button">Lese mehr</button>
@@ -71,7 +69,7 @@
             
 
             <a href="zuspieler.html" class="link">Zuspieler</a>
-            <a href="außeneingreifer.html" class="link">Außeneingreifer/Diagonalgreifer</a>
+            <a href="außeneingreifer.html" class="link">Außeneingreifer/Diagonalangreifer</a>
             <a href="libero.html" class="link">, Libero</a>
             <a href="blocker.html" class="link">und Blocker.</a>
             <p>Punkte werden erzielt, wenn der Ball im gegnerischen Spielfeld landet oder wenn der Gegner einen Fehler macht.
@@ -113,7 +111,7 @@
                         <h3>Anmeldung <div class="underline"><span></span></div></h3>
                         <form>
                             <i class="fa-regular fa-envelope"></i>
-                            <input type="email" placeholder="Enter your email id" required>
+                            <input type="email" placeholder="Geben Sie Ihre E-Mail ein" required>
                             <button type="submit"><i class="fas fa-arrow-right" arial-hidden="true"></i></button>
                         </form>
                         <div class="social-icons">
