--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,7 @@
                         </a>
                         <ul class="dropdown-menu bg-dropdown">
                             <li><a class="dropdown-item" href="zuspieler.html">Zuspieler</a></li>
-                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalspieler</a></li>
+                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalangreifer</a></li>
                             <li><a class="dropdown-item" href="libero.html">Libero</a></li>
                             <li><a class="dropdown-item" href="blocker.html">Blocker</a></li>
                         </ul>
@@ -95,7 +95,7 @@
                         <h3>Anmeldung <div class="underline"><span></span></div></h3>
                         <form>
                             <i class="fa-regular fa-envelope"></i>
-                            <input type="email" placeholder=" Enter your email id" required>
+                            <input type="email" placeholder="Geben Sie Ihre E-Mail ein" required>
                             <button type="submit"><i class="fas fa-arrow-right" arial-hidden="true"></i></button>
                         </form>
                         <div class="social-icons">
