--- a/libero.html
+++ b/libero.html
@@ -23,7 +23,7 @@
                         </a>
                         <ul class="dropdown-menu bg-dropdown">
                             <li><a class="dropdown-item" href="zuspieler.html">Zuspieler</a></li>
-                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalspieler</a></li>
+                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalangreifer</a></li>
                             <li><a class="dropdown-item" href="libero.html">Libero</a></li>
                             <li><a class="dropdown-item" href="blocker.html">Blocker</a></li>
                         </ul>
@@ -31,6 +31,7 @@
                 </ul>
             </div>
         </nav>
+
         <div class="side-bar">
             <img src="side-bar-pics/menu.png" class="menu">
             
@@ -49,33 +50,41 @@
                 </a>                    
             </div>
         </div>
+
         <div class="content">
             <h1>Libero</h1>
-            <div class="text-container">
-                <div class="text"> 
-                    <p>Liberos sind auf dem Spielfeld einfach zu erkennen. Sie tragen ein andersfarbiges Trikot als die anderen Spieler:innen ihres Teams. Das ist aber nicht die einzige Besonderheit dieser Position. "Im Frauenvolleyball sind 15 Auswechslungen pro Satz erlaubt und Liberos zählen nicht dazu", sagt Heller. 
-                        Das Wort Libero ist das italienische Wort für "frei" und entsprechend können diese Spieler:innen beliebig oft ein- und ausgewechselt werden. Wenn also Angreifer:innen in die hintere Reihe rotieren, können sie gegen Liberos ausgetauscht werden, ohne dass dies als Auswechslung ihrer Teams gezählt wird. 
-                        </p>
-                </div>
-                <div class="text">
-                    <p>Dadurch wird das Spiel schneller, da die Auswechslungen nicht erfasst werden müssen und Liberos einfach auf das Spielfeld oder aus ihm heraus gehen können. Es hilft auch bei der Abwehrarbeit des Teams. Meistens werden Liberos für Mittelangreifer:innen eingewechselt, die normalweise die schlechteren Verteidiger:innen und Passgeber:innen sind, erklärt Rosen. 
-                        "Liberos sind spezialisiert auf die Defensive. Sie sind normalerweise die besten Passgeber:innen und Verteidiger:innen ihrer Teams." Sie können zwar beliebig ein- und ausgewechselt werden, aber es gibt auch für sie Einschränkungen. Sie dürfen Spiele nur in der hinteren Reihe beginnen, was bedeutet, das sie nicht vor der 3-Meter-Linie springen und schlagen dürfen. 
-                        </p>
-                </div>
-                <div class="text">
-                    <p>Sie dürfen nicht mit ihren Händen zuspielen, sondern nur mit den Unterarmen, sagt Rosen. Je nachdem, wo gespielt wird, dürfen sie entweder nicht aufschlagen oder sie dürfen es nur, wenn sie gerade für Spieler:innen ihres Teams eingewechselt wurden. Bei internationalen Spielen dürfen Liberos nicht aufschlagen. 
-                        Bei Spielen in den Highschools und Colleges der USA dürfen sie aufschlagen, aber nur für jeweils eine/n der Spieler:innen ihrer Teams, normalerweise Mittelangreifer:innen.
-                        </p>
+            <div class="card mb-3" style="max-width: auto;">
+                <div class="row g-0">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Generell-Informationen</h5>
+                            <p class="card-text">Liberos sind auf dem Spielfeld einfach zu erkennen. Sie tragen ein andersfarbiges Trikot als die anderen Spieler:innen ihres Teams. Das ist aber nicht die einzige Besonderheit dieser Position. "Im Frauenvolleyball sind 15 Auswechslungen pro Satz erlaubt und Liberos zählen nicht dazu", sagt Heller. 
+                                Das Wort Libero ist das italienische Wort für "frei" und entsprechend können diese Spieler:innen beliebig oft ein- und ausgewechselt werden. Wenn also Angreifer:innen in die hintere Reihe rotieren, können sie gegen Liberos ausgetauscht werden, ohne dass dies als Auswechslung ihrer Teams gezählt wird.
+                            </p>
+                            <p class="card-text">Dadurch wird das Spiel schneller, da die Auswechslungen nicht erfasst werden müssen und Liberos einfach auf das Spielfeld oder aus ihm heraus gehen können. Es hilft auch bei der Abwehrarbeit des Teams. Meistens werden Liberos für Mittelangreifer:innen eingewechselt, die normalweise die schlechteren Verteidiger:innen und Passgeber:innen sind, erklärt Rosen. 
+                                "Liberos sind spezialisiert auf die Defensive. Sie sind normalerweise die besten Passgeber:innen und Verteidiger:innen ihrer Teams." Sie können zwar beliebig ein- und ausgewechselt werden, aber es gibt auch für sie Einschränkungen. Sie dürfen Spiele nur in der hinteren Reihe beginnen, was bedeutet, das sie nicht vor der 3-Meter-Linie springen und schlagen dürfen. 
+                            </p>
+                            <p class="card-text">Sie dürfen nicht mit ihren Händen zuspielen, sondern nur mit den Unterarmen, sagt Rosen. Je nachdem, wo gespielt wird, dürfen sie entweder nicht aufschlagen oder sie dürfen es nur, wenn sie gerade für Spieler:innen ihres Teams eingewechselt wurden. Bei internationalen Spielen dürfen Liberos nicht aufschlagen. 
+                                Bei Spielen in den Highschools und Colleges der USA dürfen sie aufschlagen, aber nur für jeweils eine/n der Spieler:innen ihrer Teams, normalerweise Mittelangreifer:innen.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card-body" style="background-color: black; border: 2px solid black; border-radius: 10px; box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);">
+                            <img src="pics/libero.jpg" class="img-fluid rounded-start mx-auto d-block" alt="" style="max-width: 100%; height: auto;">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        
         <div class="background-2-1">
         </div> 
         <div class="flip-card-container">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 5:1 </p>
                     </div>
                     <div class="flip-card-back">
@@ -86,7 +95,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 4:2 </p>
                     </div>
                     <div class="flip-card-back">
@@ -97,7 +106,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 6:0 </p>
                     </div>
                     <div class="flip-card-back">
@@ -106,6 +115,7 @@
                 </div>
             </div>
         </div>
+
         <footer class="footer" id="footer">
             <div class="container">
                 <div class="row"> 
@@ -137,7 +147,7 @@
                         <h3>Links <div class="underline"><span></span></div></h3>
                         <form>
                             <i class="fa-regular fa-envelope"></i>
-                            <input type="email" placeholder=" Enter your email id" required>
+                            <input type="email" placeholder="Geben Sie Ihre E-Mail ein" required>
                             <button type="submit"><i class="fas fa-arrow-right" arial-hidden="true"></i></button>
                         </form>
                         <div class="social-icons">
