--- a/zuspieler.html
+++ b/zuspieler.html
@@ -23,7 +23,7 @@
                         </a>
                         <ul class="dropdown-menu bg-dropdown">
                             <li><a class="dropdown-item" href="zuspieler.html">Zuspieler</a></li>
-                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalspieler</a></li>
+                            <li><a class="dropdown-item" href="außeneingreifer.html">Außeneingreifer <br>& Diagonalangreifer</a></li>
                             <li><a class="dropdown-item" href="libero.html">Libero</a></li>
                             <li><a class="dropdown-item" href="blocker.html">Blocker</a></li>
                         </ul>
@@ -49,34 +49,45 @@
                 </a>                    
             </div>
         </div>
+
         <div class="content">
             <h1>Zuspieler</h1>
-            <div class="text-container">
-                <div class="text"> 
-                    <p>Der Vergleich ist zwar ein bisschen klischeehaft, aber Zuspieler:innen könnten man etwa als Quarterbacks des Teams bezeichnen", sagt Brian Rosen, Trainerassistent des Frauenteams an der Creighton University. 
-                        "Sie leiten die Angriffe ein. So sorgen dafür, dass sich die Spieler:innen an der richtigen Stelle befinden. Sie verteilen die Bälle. Und sie geben vor, wer im Spiel die Punkte erzielt." 
-                        Spielzüge werden von den Zuspieler:innen mit Handsignalen oder Zahlen angekündigt, damit die anderen Spieler:innen im Team wissen, wo ihre Positionen sind und wie sie sich bewegen müssen, wenn der Ball gespielt wird.</p>
+            <div class="card mb-3" style="max-width: auto;">
+                <div class="row g-0">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Generell-Informationen</h5>
+                            <p>Der Vergleich ist zwar ein bisschen klischeehaft, aber Zuspieler:innen könnten man etwa als Quarterbacks des Teams bezeichnen", sagt Brian Rosen, Trainerassistent des Frauenteams an der Creighton University. 
+                            "Sie leiten die Angriffe ein. So sorgen dafür, dass sich die Spieler:innen an der richtigen Stelle befinden. Sie verteilen die Bälle. Und sie geben vor, wer im Spiel die Punkte erzielt." 
+                            Spielzüge werden von den Zuspieler:innen mit Handsignalen oder Zahlen angekündigt, damit die anderen Spieler:innen im Team wissen, wo ihre Positionen sind und wie sie sich bewegen müssen, wenn der Ball gespielt wird.
+                            </p>
+                            <p class="card-text">Wie Quarterbacks haben Zuspieler:innen eine Führungsposition in den Teams: "Sie leiten das Team an. Sie teilen ihren Mitspieler:innen mit, wo sie zu stehen haben und treffen auf dem Platz Entscheidungen, wenn es darum geht, 
+                            wer angespielt wird und wer nicht", sagt David Heller, Head Coach für Frauenvolleyball an der Georgetown University. (Verwandter Artikel: Die Positionen beim American Football: Eine Einführung) Eine weitere Parallele zum Quarterback: 
+                            Sie haben bei jedem Spielzug Ballkontakt und entscheiden, wo der Ball als nächstes hinkommt. Wenn der Ball über das Netz geschlagen wird, versucht ein oder eine Spieler:in, den Ball durch "Baggern" im Spiel zu halten. 
+                            Außer in Fällen, wenn die/der Zuspieler:in die Person ist, die den Ball gebaggert hat.
+                            </p>
+                            <p class="card-text">Dann ist Zuspieler:in, wer den nächsten Ballkontakt hat. Sie legen den Ball dann für eine/n der Angreifer:innen auf, die versuchen, zu schmettern und damit zu punkten. "Zuspieler:innen sind sehr gedankenschnell und können entsprechend handeln. 
+                            Sie treffen Entscheidungen in ziemlich kurzer Zeit, ohne die Kontrolle zu verlieren", sagt Heller. Und da sie entscheidend für die Zuspiele sind, die Angriffe organisieren und den Spieler:innen ihre Positionen vorgeben, 
+                            verlassen Zuspieler:innen das Spielfeld kaum, fügt er hinzu. Wenn du also eine Führungspersönlichkeit mit viel Energie bist, könnte dies die richtige Position für dich sein.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card-body" style="background-color: black; border: 2px solid black; border-radius: 10px; box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);">
+                            <img src="pics/zuspieler.jpg" class="img-fluid rounded-start mx-auto d-block" alt="" style="max-width: 100%; height: auto;">
+                        </div>
+                    </div>
                 </div>
-                <div class="text">
-                    <p>Wie Quarterbacks haben Zuspieler:innen eine Führungsposition in den Teams: "Sie leiten das Team an. Sie teilen ihren Mitspieler:innen mit, wo sie zu stehen haben und treffen auf dem Platz Entscheidungen, wenn es darum geht, 
-                        wer angespielt wird und wer nicht", sagt David Heller, Head Coach für Frauenvolleyball an der Georgetown University. (Verwandter Artikel: Die Positionen beim American Football: Eine Einführung) Eine weitere Parallele zum Quarterback: 
-                        Sie haben bei jedem Spielzug Ballkontakt und entscheiden, wo der Ball als nächstes hinkommt. Wenn der Ball über das Netz geschlagen wird, versucht ein oder eine Spieler:in, den Ball durch "Baggern" im Spiel zu halten. 
-                        Außer in Fällen, wenn die/der Zuspieler:in die Person ist, die den Ball gebaggert hat.</p>
-                </div>
-                <div class="text">
-                    <p>Dann ist Zuspieler:in, wer den nächsten Ballkontakt hat. Sie legen den Ball dann für eine/n der Angreifer:innen auf, die versuchen, zu schmettern und damit zu punkten. "Zuspieler:innen sind sehr gedankenschnell und können entsprechend handeln. 
-                        Sie treffen Entscheidungen in ziemlich kurzer Zeit, ohne die Kontrolle zu verlieren", sagt Heller. Und da sie entscheidend für die Zuspiele sind, die Angriffe organisieren und den Spieler:innen ihre Positionen vorgeben, 
-                        verlassen Zuspieler:innen das Spielfeld kaum, fügt er hinzu. Wenn du also eine Führungspersönlichkeit mit viel Energie bist, könnte dies die richtige Position für dich sein.</p>
-                </div>
-            </div>        
+            </div>
         </div>
+        
         <div class="background-2-1">
         </div> 
         <div class="flip-card-container">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 5:1 </p>
                     </div>
                     <div class="flip-card-back">
@@ -87,7 +98,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 4:2 </p>
                     </div>
                     <div class="flip-card-back">
@@ -98,7 +109,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="pics/card.png" class="half_round_img" style="width:20rem;height:18rem;">
+                        <img src="pics/card.jpg" class="half_round_img" style="width:20rem;height:18rem;">
                         <p>Spielsystem <br> 6:0 </p>
                     </div>
                     <div class="flip-card-back">
@@ -139,7 +150,7 @@
                         <h3>Links <div class="underline"><span></span></div></h3>
                         <form>
                             <i class="fa-regular fa-envelope"></i>
-                            <input type="email" placeholder=" Enter your email id" required>
+                            <input type="email" placeholder="Geben Sie Ihre E-Mail ein" required>
                             <button type="submit"><i class="fas fa-arrow-right" arial-hidden="true"></i></button>
                         </form>
                         <div class="social-icons">
